<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/fondo2"
    tools:context=".AgregarProductoActivity">


    <EditText
        android:id="@+id/ingresarNombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_marginTop="10dp"
        android:inputType="textPersonName"
        android:hint="@string/AyudaNombre"
        />
    <EditText
        android:id="@+id/ingresarCantidad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_marginTop="10dp"
        android:inputType="number"
        android:hint="@string/AyudaCantidad"
        />
    <Spinner
        android:id="@+id/ingresarUnidad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:entries="@array/unidadDeMedida"
        />
    <EditText
        android:id="@+id/otraUnidad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_marginTop="10dp"
        android:inputType="textPersonName"
        android:hint="@string/AyudaUnidad"
        />
    
    <CheckBox
        android:id="@+id/aceptoUnidad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/CheckBox"
        android:onClick="onAceptoUnidad"
        />

    <Button
        android:id="@+id/registrarProducto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/RegistrarBtn"
        android:layout_marginTop="10dp"
        android:onClick="ingresarProducto"
        />
</LinearLayout>