<?xml version="1.0" encoding="utf-8"?>
<GridLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:weightSum="3"
    android:background="@drawable/fondo"

    tools:context=".DetallesActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="32dp"
        android:layout_row="0"
        android:layout_column="0"
        android:layout_marginTop="10dp"
        android:textSize="20dp"
        android:textStyle="italic"
        android:textColor="@color/black"
        android:text="@string/TituloDetalle" />


    <TextView
        android:id="@+id/txtNombre"
        android:layout_width="wrap_content"
        android:layout_height="32dp"
        android:layout_row="1"
        android:layout_column="0"
        android:layout_marginTop="10dp"
        android:textStyle="bold"
        android:text="@string/NombreDetalle"
        android:textColor="@color/black"
        android:textSize="15dp" />

    <TextView
        android:id="@+id/txtUnidadmedida"
        android:layout_width="wrap_content"
        android:layout_height="32dp"
        android:layout_row="2"
        android:layout_column="0"
        android:layout_marginTop="10dp"
        android:textStyle="bold"
        android:text="@string/UnidadDetalle"
        android:textColor="@color/black"
        android:textSize="15dp" />

    <TextView
        android:id="@+id/txtEstado"
        android:layout_width="wrap_content"
        android:layout_height="32dp"
        android:layout_row="3"
        android:layout_column="0"
        android:layout_marginTop="10dp"
        android:textStyle="bold"
        android:text="@string/EstadoDetalle"
        android:textColor="@color/black"
        android:textSize="15dp" />


    <Button
        android:id="@+id/estado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="4"
        android:layout_column="0"
        android:textStyle="italic"
        android:layout_marginTop="10dp"
        android:onClick="cambiarEstado"


        />
</GridLayout>